Changes to build script: integrationtest task takes debug option. Added create.sh script for database setup.